# select_points_from_image

./: Cargo.toml  LICENSE  README.md
src/: main.rs
