[package]
name = "picker"
version = "0.0.0"
edition = "2018"
keywords = []

[dependencies]
piston_window = "0.123.0"
find_folder = "0.3.0"
image = "0.24.1"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
shader_version = "0.7.0"
imagesize = "0.9.0"
clap = { version = "3.2.6", features = ["derive"] }
